--- a/Lab Assignment 3/views/homepage.ejs
+++ b/Lab Assignment 3/views/homepage.ejs
@@ -1,101 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Music Download</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-Z2F8B8ZyPAMFNU3WPPsUpPze3PFgHSmKZO4Fk5jS+QU6sN8AHRl8P7lCddufcAM9" crossorigin="anonymous">
-    <!-- Custom CSS -->
-
-    <link rel="stylesheet" href="/style.css">
-    
-</head>
-<body>
-   <header class="fixed-top">
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <div class="container">
-           
-            <button class="navbar-toggler text-white" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            
-            <!-- Logo -->
-            <a class="navbar-brand mx-auto text-light mr-auto" href="index.html">
-                <img class="logo-img" src="images/transparent_2024-02-28T13-19-31.png" alt="Logo"> Saggitarius
-            </a>
-    
-          
-    
-           
-    
-   <!-- Search Form -->
-<form class="form-inline my-2 my-lg-0">
-    <div class="input-group">
-        <input class="form-control form-control-sm mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <div class="input-group-append">
-            <button class="btn btn-sm  my-sm-0" type="submit">
-                <img src="images/Untitled-1.svg" alt="Search">
-            </button>
-        </div>
-    </div>
-</form>
-<img  class='searchIcon' src="images/Untitled-1 copy.svg">
 
 
-                <!-- Contact Us -->
-                <a class="nav-link text-light Contact" href="contactUs.html">Contact Us</a>
-                
-                <!-- Login -->
-                <a class="nav-link text-light border1 login-text" href="#">
-                    <img class="login" src="images/Untitled-2.svg" alt="Login"> Log In
-                </a>
-           
-    </nav>
-    
-
-    <!-- Navigation Items Container -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <div class="container">
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link text-light" href="#">All <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="#">Trending Now</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="#">Old Songs</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-light" href="#" id="moodsGenreDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Moods&Genre
-                        </a>
-                        <div class="dropdown-menu bg-dark" aria-labelledby="moodsGenreDropdown">
-                            <a class="dropdown-item text-light" href="#">Happy</a>
-                            <a class="dropdown-item text-light" href="#">Sad</a>
-                            <a class="dropdown-item text-light" href="#">Excited</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-light" href="#" id="topPlaylistsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Top Playlists
-                        </a>
-                        <div class="dropdown-menu bg-dark" aria-labelledby="topPlaylistsDropdown">
-                            <a class="dropdown-item text-light" href="#">Pop Hits</a>
-                            <a class="dropdown-item text-light" href="#">Rock Classics</a>
-                            <a class="dropdown-item text-light" href="#">Hip-Hop Vibes</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
+  
 
 <section class="carousel-section ">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -108,19 +13,19 @@
     <div class="carousel-item active">
         <div class="row ">
         <div class="col-md-6 mt-4 ">
-            <img src="images/76ea18c77adfaf743c818fe283a8a776.jpg" class="d-block w-100 border2" alt="...">
+        <a href="hiphopSongs">    <img src="images/76ea18c77adfaf743c818fe283a8a776.jpg" class="d-block w-100 border2" alt="..."></a>
         </div>
         <div class="col-md-6 mt-4">
-            <img src="images/maxresdefault.jpg" class="d-block w-100 border2" alt="...">
-        </div>
+            <a href="SadSongs">   <img src="images/maxresdefault.jpg" class="d-block w-100 border2" alt="...">
+            </a></div>
     </div>
     </div>
 
     <div class="carousel-item">
         <div class="row ">
         <div class="col-md-6 mt-4">
-           <img src="images/BANNER_206771117875970.webp" class="d-block w-100 border2" alt="...">
-        </div>
+            <a href="newEnglish">  <img src="images/BANNER_206771117875970.webp" class="d-block w-100 border2" alt="...">
+            </a></div>
         <div class="col-md-6 mt-4">
             <img src="images/293506.jpg" class="d-block w-100 border2" alt="...">
         </div>
@@ -152,113 +57,92 @@
    
 <section class="featured-music pt-5 text-light">
     <div class="container">
-        <h3 class=" mb-4">Hindi Top 15</h3>
+        <h3 class=" mb-4">Hindi Top 14</h3>
+       
+             
 
-        <div class="row " id="songs-container">
-           
-            
-           
-        </div>
-        <div class="text-center mb-3">
-            <div class="btn-group" role="group" aria-label="Language Switch">
-                <button type="button" class="btn " id="showMoreBtn2">Show More</button>
-                <button type="button" class="btn " id="showLess2">Show Less</button>
+<div class=" row songs-container">
+    <% for (let index = 0; index < songs.length; index++) { %>
+        <div class="col-md-4 mb-4 col-sm-6">
+            <div class="card bg-dark-2 card-height">
+                <a href="/song-details?id=<%= songs[index]._id %>"> <img src="<%= songs[index].imageUrl %>" class="card-img-top image-height-2" alt="Music Image"></a>
+                <div class="card-body">
+                    <h5 class="card-title"><%= songs[index].name %></h5>
+                    
+                    <% if (songs[index].artists && songs[index].artists.length > 0) { %>
+                        <p class="card-text">Artist:
+                            <% for (let i = 0; i < songs[index].artists.length; i++) { %>
+                                <%= songs[index].artists[i] %>
+                                <% if (i < songs[index].artists.length - 1) { %>, <% } %>
+                            <% } %>
+                        </p>
+                    <% } else { %>
+                        <p class="card-text">No Artist Found</p>
+                    <% } %>
+                   
+                    <a href="/download/<%= collection %>/<%= songs[index]._id %>" class="btn btn-primary bg-dark">Download Now</a>
+                </div>
             </div>
         </div>
+    <% } %>
+</div>
+
+<div class="pagination-container text-center text-light">
+    <div class="pagination">
+        <% if (totalPages > 1) { %>
+            <% for (let i = 1; i <= totalPages; i++) { %>
+                <a href="/?page=<%= i %>" class="pagination-link <%= i === currentPage ? 'active' : '' %>">
+                    <%= i %>
+                </a>
+            <% } %>
+        <% } %>
+    </div>
+</div>
+
+        
     </div>
 </section>
 
 <section class="carousel-section mt-0">
     <div class="container">
-       
-    <h3 class=" mb-4 text-light">English Songs</h3>
+        <h3 class="mb-4 text-light">English Songs</h3>
     </div>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    
-    </ol>
-    <div class="carousel-inner">
-    <div class="carousel-item active">
-        <div class="row ">
-        <div class="col-6 col-sm-4 col-md-2 mt-2">
-            <img src="images/genius.jpg" class="d-block w-100 border2 image-height" alt="...">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <% for (let i = 0; i < englishSongs.length; i += 6) { %>
+                <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+                    <div class="row">
+                        <% for (let j = i; j < i + 6 && j < englishSongs.length; j++) { %>
+                            <div class="col-6 col-sm-4 col-md-2 mt-2">
+                                <a href="/song-details?id=<%= englishSongs[j]._id %>">  <img src="<%= englishSongs[j].thumbnail %>" class="d-block w-100 border2 image-height" alt="..."></a>
+                                <a href="/download/<%= collection_name %>/<%= englishSongs[j]._id %>" class="btn btn-primary bg-dark">Download Now</a>
+                                <% console.log('Song ID:', englishSongs[j]._id); %>
+                            </div>
+                        <% } %>
+                        
+                    </div>
+                </div>
+            <% } %>
         </div>
-        <div class="col-6 col-sm-4 col-md-2 mt-2">
-            <img src="images/fantasize.jpg" class="d-block w-100 border2 image-height" alt="...">
+        
+            
         </div>
-        <div class="col-6 col-sm-4 col-md-2 mt-2">
-            <img src="images/untouchable.jpg" class="d-block w-100 border2 image-height" alt="...">
-        </div>
-        <div class="col-6 col-sm-4 col-md-2 mt-2">
-            <img src="images/dandelions.jpg" class="d-block w-100 border2 image-height" alt="...">
-        </div>
-        <div class="col-6 col-sm-4 col-md-2 mt-2">
-            <img src="images/house of memories.jpg" class="d-block w-100 border2 image-height" alt="...">
-        </div>
-        <div class="col-6 col-sm-4 col-md-2 mt-2">
-            <img src="images/until i found you.jpg" class="d-block w-100 border2 image-height" alt="...">
-        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    </div>
+</section>
 
-    <div class="carousel-item">
-        <div class="row ">
-            <div class="col-6 col-sm-4 col-md-2 mt-2">
-                <img src="images/genius.jpg" class="d-block w-100 border2 image-height" alt="...">
-            </div>
-            <div class="col-6 col-sm-4 col-md-2 mt-2">
-                <img src="images/fantasize.jpg" class="d-block w-100 border2 image-height" alt="...">
-            </div>
-            <div class="col-6 col-sm-4 col-md-2 mt-2">
-                <img src="images/untouchable.jpg" class="d-block w-100 border2 image-height" alt="...">
-            </div>
-            <div class="col-6 col-sm-4 col-md-2 mt-2">
-                <img src="images/dandelions.jpg" class="d-block w-100 border2 image-height" alt="...">
-            </div>
-            <div class="col-6 col-sm-4 col-md-2 mt-2">
-                <img src="images/house of memories.jpg" class="d-block w-100 border2 image-height" alt="...">
-            </div>
-            <div class="col-6 col-sm-4 col-md-2 mt-2">
-                <img src="images/until i found you.jpg" class="d-block w-100 border2 image-height" alt="...">
-            </div>
-    </div>
-</div>
-    <div class="carousel-item">
-        <div class="row ">
-            <div class="col-6 col-sm-4 col-md-2 mt-2">
-                <img src="images/genius.jpg" class="d-block w-100 border2 image-height" alt="...">
-            </div>
-            <div class="col-6 col-sm-4 col-md-2 mt-2">
-                <img src="images/fantasize.jpg" class="d-block w-100 border2 image-height" alt="...">
-            </div>
-            <div class="col-6 col-sm-4 col-md-2 mt-2">
-                <img src="images/untouchable.jpg" class="d-block w-100 border2 image-height" alt="...">
-            </div>
-            <div class="col-6 col-sm-4 col-md-2 mt-2">
-                <img src="images/dandelions.jpg" class="d-block w-100 border2 image-height" alt="...">
-            </div>
-            <div class="col-6 col-sm-4 col-md-2 mt-2">
-                <img src="images/house of memories.jpg" class="d-block w-100 border2 image-height" alt="...">
-            </div>
-            <div class="col-6 col-sm-4 col-md-2 mt-2">
-                <img src="images/until i found you.jpg" class="d-block w-100 border2 image-height" alt="...">
-            </div>
-        </div>
-    </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-    </a>
-    </div>
-    </section>
 <!-- Top Artists Section -->
 <section class="top-artists my-5">
     <div class="container">
@@ -308,53 +192,4 @@
 </section>
 
 
-   <!-- Footer --> 
-<footer class="bg-dark py-3 mt-5">
-    <div class="container">
-        
-       
-        
-        <!-- Music Downloader App Description -->
-        <div class="row">
-            <div class="col-md-4 text-center">
-                <a class="text-light" href="#">About Us</a>
-            </div>
-            <div class="col-md-4 text-center">
-                <a class="text-light" href="#">FAQs</a>
-            </div>
-            <div class="col-md-4 text-center">
-                <a class="text-light" href="#">Terms And Policy</a>
-            </div>
-            <div class="col-md-4 text-center">
-                <a class="text-light" href="crud.html">ADD Music</a>
-            </div>
-           
-
-
-        </div>
-        
-        <div class="row">
-            <div class="col-md-6">
-                <p class="text-light">&copy; 2024 Saggitarius</p>
-            </div>
-            <div class="col-md-6 text-right">
-                <p class="text-light">Designed by Mariam Ali</p>
-            </div>
-        </div>
-        
-        
-    </div>
-</footer>
-
-    
-
-    <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    
-    
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/jqcrud.js"></script>
-</body>
-</html>
+ 
