--- a/Final/views/layout.ejs
+++ b/Final/views/layout.ejs
@@ -18,81 +18,91 @@
 </head>
 <body>
     <header class="fixed-top">
-     <!-- Navigation Bar -->
-     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-         <div class="container">
-            
-             <button class="navbar-toggler text-white" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                 <span class="navbar-toggler-icon"></span>
-             </button>
-             
-             <!-- Logo -->
-             <a class="navbar-brand mx-auto text-light mr-auto" href="/">
-                 <img class="logo-img" src="/images/transparent_2024-02-28T13-19-31.png" alt="Logo"> Saggitarius
-             </a>
-     
-           
-     
-            
-     
-    <!-- Search Form -->
-    <form class="form-inline my-2 my-lg-0" action="/search-results" method="GET">
-        <div class="input-group">
-            <input class="form-control form-control-sm mr-sm-2" type="search" name="query" placeholder="Search" aria-label="Search">
-            <div class="input-group-append">
-                <button class="btn btn-sm my-sm-0" type="submit">
-                    <img src="/images/Untitled-1.svg" alt="Search">
+        <!-- Navigation Bar -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+            <div class="container">
+                <button class="navbar-toggler text-white" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-            </div>
-        </div>
-    </form>
-    <img class="searchIcon" src="/images/Untitled-1 copy.svg">
     
-  
- 
-                 
-                 <% if (!user) { %> <!-- Login -->
-                 <a class="nav-link text-light login-text" href="/login">
-                     <img class="login" src="/images/Untitled-2.svg" alt="Login"> Log In
-                 </a>
-                 <a class="nav-link text-light border1 login-text" href="/register">Register</a>
-                 <% } else { %>
-                    <a class="nav-link text-light  login-text" href="/logout">Log Out</a>
+                <!-- Logo -->
+                <a class="navbar-brand mx-auto text-light mr-auto" href="/">
+                    <img class="logo-img" src="/images/transparent_2024-02-28T13-19-31.png" alt="Logo"> Saggitarius
+                </a>
+    
+                <!-- Search Form -->
+                <form class="form-inline my-2 my-lg-0" action="/search-results" method="GET">
+                    <div class="input-group">
+                        <input class="form-control form-control-sm mr-sm-2" type="search" name="query" placeholder="Search" aria-label="Search">
+                        <div class="input-group-append">
+                            <button class="btn btn-sm my-sm-0" type="submit">
+                                <img src="/images/Untitled-1.svg" alt="Search">
+                            </button>
+                        </div>
+                    </div>
+                </form>
+                <img class="searchIcon" src="/images/Untitled-1 copy.svg">
+    
+                <% if (!user) { %>
+                    <!-- Login -->
+                    <a class="nav-link text-light login-text" href="/login">
+                        <img class="login" src="/images/Untitled-2.svg" alt="Login"> Log In
+                    </a>
+                    <a class="nav-link text-light border1 login-text" href="/register">Register</a>
+                <% } else { %>
+                    <a class="nav-link text-light login-text" href="/logout">Log Out</a>
                     <li class="text-light">Welcome <%= user.name %>!</li>
                 <% } %>
-     </nav>
-     
- 
-     <!-- Navigation Items Container -->
-     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-         <div class="container">
-             <div class="collapse navbar-collapse" id="navbarNav">
-                 <ul class="navbar-nav">
-                     <li class="nav-item active">
-                         <a class="nav-link text-light" href="/allSongs/all_songs">All <span class="sr-only">(current)</span></a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link text-light" href="/allSongs/short_songs">Shorts</a>
-                    </li>
-                     <li class="nav-item">
-                         <a class="nav-link text-light" href="/allSongs/trending_songs">Trending Now</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="text-light nav-link" href="/addMusic">ADD Music</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="text-light nav-link" href="/./token">API</a>
-                    </li>
-                    
-                    
-                 </ul>
-             </div>
-         </div>
-     </nav>
- </header>
- <diV class="heightset">
-
- </diV>
+            </div>
+        </nav>
+    
+        <!-- Navigation Items Container -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+            <div class="container">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link text-light" href="/allSongs/all_songs">All <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="/allSongs/short_songs">Shorts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="/allSongs/trending_songs">Trending Now</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="text-light nav-link" href="/addMusic">ADD Music</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="text-light nav-link" href="/./token">API</a>
+                        </li>
+                    </ul>
+    
+                    <!-- Search History Dropdown -->
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-light" href="#" id="searchHistoryDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Search History
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="searchHistoryDropdown">
+                                <% if (searchHistory && searchHistory.length > 0) { %>
+                                    <% searchHistory.forEach(term => { %>
+                                        <a class="dropdown-item" href="/search-results?query=<%= term %>"><%= term %></a>
+                                    <% }) %>
+                                <% } else { %>
+                                    <a class="dropdown-item" href="#">No search history</a>
+                                <% } %>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    
+    <div class="heightset">
+    </div>
+    
  <% if (flash) { %>
     <div class="alert alert-<%-flash.type%>">
        <%= flash.message %>
