--- a/Final/views/search-results.ejs
+++ b/Final/views/search-results.ejs
@@ -1,26 +1,52 @@
 <div class="mt-2"></div>
-    <h1 class="text-light">Song Search Results</h1>
+<h1 class="text-light">Song Search Results</h1>
 
-    <div class="row">
-        <% if (songMatches.length > 0) { %>
-            <% songMatches.forEach(song => { %>
-                <div class="col-md-4 mb-4">
-                    <div class="card  bg-dark-2 card-height text-light">
-                        <a href="/song-details?id=<%= song._id %>">
-                            <img src="<%= song.thumbnail || 'images/photo-1470225620780-dba8ba36b745.avif' %>" class="card-img-top" alt="<%= song.name %>">
-                          </a>
-                          
-                        <div class="card-body">
-                            <h5 class="card-title"><%= song.name %></h5>
-                            <a href="/download/<%= collection %>/<%= song._id %>" class="btn btn-primary bg-dark">Download Now</a>
-                            
-                        
-                        </div>
+<div class="row">
+    <% if (songMatches.length > 0) { %>
+        <% songMatches.forEach(song => { %>
+            <div class="col-md-4 mb-4">
+                <div class="card bg-dark-2 card-height text-light">
+                    <a href="/song-details?id=<%= song._id %>">
+                        <img src="<%= song.thumbnail || 'images/photo-1470225620780-dba8ba36b745.avif' %>" class="card-img-top" alt="<%= song.name %>">
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title"><%= song.name %></h5>
+                        <a href="/download/<%= collection %>/<%= song._id %>" class="btn btn-primary bg-dark">Download Now</a>
                     </div>
                 </div>
-            <% }) %>
-        <% } else { %>
-            <p class="text-light ml-3">No matching songs found.</p>
-        <% } %>
-    </div>
+            </div>
+        <% }) %>
+    <% } else { %>
+        <p class="text-light ml-3">No matching songs found.</p>
+    <% } %>
+</div>
 
+<div class="mt-2">
+   
+        <ul class="pagination pagination-container-2">
+            <% if (pagination.page > 1) { %>
+                <li class="page-item">
+                    <a class="page-link pagination-link" href="?query=<%= query %>&page=1&limit=<%= pagination.limit %>">First</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link pagination-link" href="?query=<%= query %>&page=<%= pagination.page - 1 %>&limit=<%= pagination.limit %>">Previous</a>
+                </li>
+            <% } %>
+
+            <% for (let i = 1; i <= pagination.totalPages; i++) { %>
+                <li class="page-item <%= (i === pagination.page) ? 'active' : '' %>">
+                    <a class="page-link pagination-link" href="?query=<%= query %>&page=<%= i %>&limit=<%= pagination.limit %>"><%= i %></a>
+                </li>
+            <% } %>
+
+            <% if (pagination.page < pagination.totalPages) { %>
+                <li class="page-item">
+                    <a class="page-link pagination-link" href="?query=<%= query %>&page=<%= pagination.page + 1 %>&limit=<%= pagination.limit %>">Next</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link pagination-link" href="?query=<%= query %>&page=<%= pagination.totalPages %>&limit=<%= pagination.limit %>">Last</a>
+                </li>
+            <% } %>
+        </ul>
+    
+</div>
